title and css changes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <script src="script/script.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>
-      - Arpit Golash - Peer Review Projet - Simple Interest
-      Calculator
+        Web App – Simple Interest Calculator
     </title>
   </head>
   <body>
